--- a/css/footer.css
+++ b/css/footer.css
@@ -1,8 +1,9 @@
 footer{
     margin: 0 auto 0 auto;
-    width: 1200px;
-    height: 339px;
+    width: auto;
+    height: auto;
     display: flex;
+    justify-content: center;
     flex-direction: row;
     flex-wrap: wrap;
     background-image: url("../img/footer-background.jpg");
@@ -14,33 +15,103 @@ footer p a{
     color: white;
 }
 
+footer p a:hover{
+    color: #737373;
+}
+
+footer #copyright{
+    font-size: 12px;
+}
+
 #map{
-    padding-left: 5px;
-    width: 405px;
+    width: 33%;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    text-align: center;
 }
 
 #number{
-    width: 380px;
     display: flex;
+    width: 33%;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    text-align: center;
 }
 
 #logo{
-    padding-right: 5px;
-    width: 405px;
+    width: 33%;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    text-align: center;
 }
 
 #logo img{
     width: 169px;
 }
 
+#gmap{
+    width: 385px;
+    height: 225px;
+}
+
+@media (max-width:1199px){
+
+    #gmap{
+        width: 90%;
+        height: auto;
+    }
+
+    footer{
+        font-size: 14px;
+    }
+
+    footer #copyright{
+        font-size: 12px;
+    }
+}
+
+@media (max-width:575px){
+    footer{
+        flex-direction: column;
+        justify-content: center;
+        background: #20242f;
+        text-align: center;
+    }
+
+    #logo{
+        order: 1;
+        margin: 0 auto 5px auto;
+        width: 60%;
+    }
+
+    #number{
+        order: 2;
+        margin: 5px auto 5px auto;
+        width: 60%;
+    }
+
+    #map{
+        order: 3;
+        width: 100%;
+    }
+
+    #map p{
+        margin: 5px auto 10px auto;
+        width: 60%;
+    }
+    #gmap{
+        width: 100%;
+        height: 260px;
+    }
+
+    #copyright{
+        order: 4;
+        margin: 10px 0 10px 0;
+        width: 100%;
+    }
+}
